After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732206 - wayland: crash with touch but no pointer
wayland: crash with touch but no pointer
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Wayland
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-06-25 08:13 UTC by Emilio Pozuelo Monfort
Modified: 2014-06-28 04:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
wayland: don't change the cursor if there is no pointer (940 bytes, patch)
2014-06-25 08:13 UTC, Emilio Pozuelo Monfort
committed Details | Review

Description Emilio Pozuelo Monfort 2014-06-25 08:13:18 UTC
If you've got a system with a touch screen and no mouse pointer, gtk+ can crash because it assumes there is a wl_pointer. See attached patch, and note how wl_pointer is properly set, and may be NULL if WL_SEAT_CAPABILITY_POINTER is not set.
Comment 1 Emilio Pozuelo Monfort 2014-06-25 08:13:54 UTC
Created attachment 279176 [details] [review]
wayland: don't change the cursor if there is no pointer
Comment 2 Matthias Clasen 2014-06-28 04:14:03 UTC
Attachment 279176 [details] pushed as 6de2c7f - wayland: don't change the cursor if there is no pointer