wayland: don't change the cursor if there is no pointer

https://bugzilla.gnome.org/show_bug.cgi?id=732206